# data-migration-repo

./: .gitignore  CHANGELOG.md  OVERVIEW.md  README.md  WALKTHROUGH.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/: TEMPLATE_DESCRIPTION.md
dm/: bootstrap.py  cli.py
examples/customer-service/artifacts/: observer_baseline.json  signoff.json
examples/customer-service/artifacts/generated_schema/: ct_record_addresses.sql  ct_record_addresses_transforms.sql  ct_record_contacts.sql  ct_record_contacts_transforms.sql  ct_records.sql  ct_records_transforms.sql  diff_report.json  full_schema.sql  updated_datasets.yaml  updated_mappings.json
examples/customer-service/artifacts/run_2026-04-28_16-54-56/: confidence_score.txt  governance_report.csv  readiness_report.md  run_metadata.json  schema_diff.md
examples/customer-service/artifacts/run_2026-04-28_16-55-18/: confidence_score.txt  reconciliation_report.md  run_metadata.json
examples/customer-service/artifacts/run_2026-04-28_16-55-36/: proof_report.md  run_metadata.json
examples/unemployment-claims-analysis/artifacts/: observer_baseline.json
examples/unemployment-claims-analysis/artifacts/generated_schema/: benefit_payments.sql  benefit_payments_transforms.sql  claimant_addresses.sql  claimant_addresses_transforms.sql  claimants.sql  claimants_transforms.sql  claims.sql  claims_transforms.sql  diff_report.json  employer_addresses.sql  employer_addresses_transforms.sql  employers.sql  employers_transforms.sql  full_schema.sql  updated_datasets.yaml  updated_mappings.json
(+41 files in other folders)
